<resources>
    <string name="app_name">Calculator</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="more">2nd</string>
    <string name="clear">C</string>
    <string name="multiply">×</string>
    <string name="divide">÷</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="result">=</string>
    <string name="point">.</string>
    <string name="percent">%</string>
    <string name="sine">sin</string>
    <string name="cosine">cos</string>
    <string name="tangent">tan</string>
    <string name="logarithm">log</string>
    <string name="factorial">!</string>
    <string name="power"><expression>a&#x1D47;</expression></string>
    <string name="square_root">√a</string>
    <string name="reciprocal">1/a</string>
    <string name="pi">π</string>
    <string name="euler">e</string>

</resources>